doctorapp/force-app/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <description>Physical store location (supports multi-store).</description>
    <label>Store</label>
    <nameField>
        <displayFormat>STR-{00000}</displayFormat>
        <label>Store Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>