doctorapp/force-app/main/default/objects/Store__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Physical address.</description>
    <label>Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>